--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     
+    <canvas id="staticCanvas"></canvas>
     <canvas id="canvas"></canvas>
+
 
     <button id="save" >Save</button>
     <button id="clear" >Clear</button>
-    <h3 id="dist"> </h3>
 
     <script src="utils.js"></script>
     <script src="network.js"></script>
     <script src="sensors.js"></script>
     <script src="controller.js"></script>
     <script src="car.js"></script>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
