--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <canvas id="staticCanvas"></canvas>
     <canvas id="canvas"></canvas>
+    <canvas id="closeupCanvas"></canvas>
 
-
-    <button id="save" >Save</button>
-    <button id="clear" >Clear</button>
+    <!-- <button id="save" >Save</button>
+    <button id="clear" >Clear</button> -->
 
     <script src="utils.js"></script>
     <script src="network.js"></script>
